--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.1.1'
     id 'io.spring.dependency-management' version '1.1.0'
     id 'io.freefair.lombok' version '8.1.0'
+    id 'by.grigoryev.pavel.git-tag-plugin' version '1.0.0'
 }
 
 group = 'com.grigoryev'
@@ -12,10 +13,8 @@ java {
     sourceCompatibility = targetCompatibility = '17'
 }
 
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
-    }
+pushTag {
+    checkUncommitted = true
 }
 
 repositories {
